[FIX] web_enterprise: HomeMenu toggle icon overlap
Since commit [1], the NavBar actually removes the parts/buttons specific
to small/desktop-like screens instead of hidding them with responsive
classes.

This commit adapts also the HomeMenu toggle icon's breakpoint to match
`isSmall`, avoiding a ugly overlap between `md` and `lg` breakpoints.

Steps to reproduce:
- open an app with a resolution > 992px
- resize the viewport below 992px
=> the app's icon and HomeMnu one are overlapping

opw-4033259

[1]: odoo/enterprise@a586702247e5dbe3690377d19cc84f7ab54e77ee

closes odoo/enterprise#66250

X-original-commit: c0f948173a114f5509f6d606de9bdb34f7269617

--- a/web_enterprise/static/src/webclient/navbar/navbar.scss
+++ b/web_enterprise/static/src/webclient/navbar/navbar.scss
@@ -55,7 +55,7 @@
 
         // Animate on large screen without 'reduced-motion' only.
         // --------------------------------------------------------------------
-        @include media-breakpoint-up(lg) {
+        @include media-breakpoint-up(md) {
             &.hasImage:not(.o_menu_toggle_back) {
                 .o_menu_toggle_icon {
                     opacity: 0;
